--- a/index.html
+++ b/index.html
@@ -73,5 +73,6 @@
       <div class="menuItems"></div>
     </div>
     <script src="js/index.js"></script>
+    <script src="js/home.js"></script>
   </body>
 </html>
