--- a/console.html
+++ b/console.html
@@ -41,7 +41,7 @@
           	c-1.4,0-2.8,0.3-3.1,1.9c-0.3,1.2,0.7,1.9,2.1,1.9l30.7-0.4L444,273.2z"/>
           </svg>
 
-          <svg version="1.1" id="Laag_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+          <svg version="1.1" class="previewItemLaag2" id="itemLaagSecnd"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
           	 viewBox="0 0 960 560" xml:space="preserve">
           <path class="st0" d="M677.9,519.1c-1.4,0.5-3.1,1.2-5,2.1c2.5-1,5-2,7.5-3C679.6,518.5,678.8,518.7,677.9,519.1z"/>
           <path class="st1" d="M680.3,518.2c0.7-0.3,1.4-0.5,2.1-0.8c1.1-0.5,2.1-1.1,3.1-2.1c1.5-1.5,2.3-3,3.2-5.1c0.1-0.1,0.1-0.3,0.2-0.4
