--- a/controller.html
+++ b/controller.html
@@ -99,6 +99,7 @@
           </div>
 
           <button type="button" name="button" class="volgendeBtn">Volgende stap</button>
+          <button type="button" name="button" class="volgendeBtn">Volgende stap</button>
 
         </div>
       </div>
