--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div class="keuzeTekst" id="keuzeTekst1">
             <h1>PS5 Console</h1>
             <p>Begin nu met customize!</p>
-            <button type="button" name="button" class="buttonStart">Start hier</button>
+            <a href="controller.html"><button type="button" name="button" class="buttonStart">Start hier</button></a>
           </div>
         </div>
       </div>
@@ -35,7 +35,7 @@
           <div class="keuzeTekst" id="keuzeTekst2">
             <h1>Games</h1>
             <p>Kies je eigen game!</p>
-            <button type="button" name="button" class="buttonStart">Kies een game</button>
+            <a href="controller.html"><button type="button" name="button" class="buttonStart">Kies een game</button></a>
           </div>
         </div>
       </div>
@@ -46,7 +46,7 @@
           <div class="keuzeTekst" id="keuzeTekst3">
             <h1>PS5 Controller</h1>
             <p>Begin nu met customize!</p>
-            <button type="button" name="button" class="buttonStart">Start hier</button>
+            <a href="controller.html"><button type="button" name="button" class="buttonStart">Start hier</button></a>
           </div>
         </div>
       </div>
