--- a/controller.html
+++ b/controller.html
@@ -98,7 +98,7 @@
             </div>
           </div>
 
-          <button type="button" name="button" class="volgendeBtn">Volgende stap</button>
+          <a href="console.html"><button type="button" name="button" class="volgendeBtn">Volgende stap</button></a>
 
         </div>
       </div>
