--- a/geslaagd.html
+++ b/geslaagd.html
@@ -13,7 +13,7 @@
       <h3>Je bestelling bij Sony Entertainment is voltooid!</h3>
       <p>Binnen 2 weken zal de bestelling geleverd worden.</p>
       <p>Bedankt voor uw aankoop!</p>
-      <a href="index.html"><button type="button" name="button" class="volgendeBtn">Afsluiten</button></a>
+      <a href="index.html"><button type="button" name="button" class="volgendeBtn geluidje">Afsluiten</button></a>
     </div>
     <div class="menuWrap">
       <div id="menuContainer" class="menuContainer">
