--- a/selecteerSpel.html
+++ b/selecteerSpel.html
@@ -17,7 +17,7 @@
         </div>
       </div>
     </div>
-    <div class="stapTerugWrap">
+    <div class="stapTerugWrap geluidje">
       <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-down" class="svg-inline--fa fa-chevron-down fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"></path></svg>
       <button type="button" name="button" class="terugBtn">Vorige stap</button>
     </div>
@@ -43,9 +43,9 @@
     </div>
 
     <section class="gameSlider">
-      <p>Selecteer een game bij jouw bundel!</p>
+      <h3>Selecteer een game bij jouw bundel!</h3>
       <div  id='games'>
-          <button id='terug'><svg class="sliderSvg" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="angle-left" class="svg-inline--fa fa-angle-left fa-w-8" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512"><path fill="currentColor" d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"></path></svg></button>
+          <button id='terug' class="geluidje"><svg class="sliderSvg" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="angle-left" class="svg-inline--fa fa-angle-left fa-w-8" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512"><path fill="currentColor" d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"></path></svg></button>
           <div class="gamesContainer">
             <div id="gradientLinks">
               <img src="assets/games/game5.png" id="gameLinks">
@@ -55,9 +55,9 @@
             <div id="gradientRechts">
               <img src="assets/games/game2.png" id="gameRechts">
               <div id="gradientR"></div>
-            </div>  
+            </div>
           </div>
-          <button id='vooruit'><svg class="sliderSvg" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="angle-right" class="svg-inline--fa fa-angle-right fa-w-8" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512"><path fill="currentColor" d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"></path></svg></button>
+          <button id='vooruit' class="geluidje"><svg class="sliderSvg" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="angle-right" class="svg-inline--fa fa-angle-right fa-w-8" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512"><path fill="currentColor" d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"></path></svg></button>
       </div>
       <div class="gameInfo">
 
@@ -78,13 +78,13 @@
           <h3 id="gameTitle2">The Last Of Us Part 2</h3>
           <h5 id="gameStudio2">Naughty Dog</h5>
           <p id="gameOmschrijving"></p>
-          <img id="game_screen" src="assets/game_screens/thelastofus.jpg">        
+          <img id="game_screen" src="assets/game_screens/thelastofus.jpg">
         </div>
       </div>
 
       <div class="cutomizeSection" id="cutomizeSection">
         <div class="cutomizeSectionContainer">
-          <button type="button" name="button" class="volgendeBtn">Volgende stap</button>
+          <button type="button" name="button" class="volgendeBtn geluidje">Volgende stap</button>
         </div>
       </div>
 
