--- a/controller.html
+++ b/controller.html
@@ -17,7 +17,7 @@
         </div>
       </div>
     </div>
-    <div class="stapTerugWrap">
+    <div class="stapTerugWrap geluidje">
       <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-down" class="svg-inline--fa fa-chevron-down fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="#fff" d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"></path></svg>
       <button type="button" class="terugBtn" name="button">Vorige stap</button>
     </div>
@@ -59,7 +59,7 @@
 
 
           <div class="custVlakWrap" >
-            <div class="custVlakHead" id="primWrap">
+            <div class="custVlakHead geluidje" id="primWrap">
               <div class="kleurSelected" id="kleurSelecPrim"></div>
               <h2>Primary color</h2>
               <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-down" class="svg-inline--fa fa-chevron-down fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"></path></svg>
@@ -69,7 +69,7 @@
           </div>
 
           <div class="custVlakWrap" >
-            <div class="custVlakHead" id="secndWrap">
+            <div class="custVlakHead geluidje" id="secndWrap">
               <div class="kleurSelected" id="kleurSelecSecnd"></div>
               <h2>Secondary color</h2>
               <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-down" class="svg-inline--fa fa-chevron-down fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"></path></svg>
@@ -79,7 +79,7 @@
           </div>
 
           <div class="custVlakWrap">
-            <div class="custVlakHead"  id="thumbsWrap">
+            <div class="custVlakHead geluidje"  id="thumbsWrap">
               <div class="kleurSelected" id="kleurSelecThumb"></div>
               <h2>Joysticks</h2>
               <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-down" class="svg-inline--fa fa-chevron-down fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"></path></svg>
@@ -89,7 +89,7 @@
           </div>
 
           <div class="custVlakWrap">
-            <div class="custVlakHead"  id="btnWrap">
+            <div class="custVlakHead geluidje"  id="btnWrap">
               <div class="kleurSelected" id="kleurSelecBtn"></div>
               <h2>Buttons</h2>
               <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-down" class="svg-inline--fa fa-chevron-down fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"></path></svg>
@@ -98,7 +98,7 @@
             </div>
           </div>
 
-          <button type="button" name="button" class="volgendeBtn">Volgende stap</button>
+          <button type="button" name="button" class="volgendeBtn geluidje">Volgende stap</button>
 
         </div>
       </div>
